Added -Xverify:none which is required for M1 Macs.