@@ -2,4 +2,4 @@ mkdir bin
 
 javac -d bin -cp "CommandLineJunit/*" src/*.java
 
-java -cp bin GameOfLife $1
+java -Xverify:none -cp bin GameOfLife $1
